imagenes con animacion en top

--- a/styles/index.css
+++ b/styles/index.css
@@ -91,16 +91,17 @@ section {
 #home {
   height: calc(100vh - 230px);
   border-color: #6b0fb6;
-  background-image: url("/assets/images/201.jpg");
+  background-image: url("/assets/images/banner.png");
+  background-size:cover;
+  color: #6b0fb6;
+  font-size: 40px;
 }
-#home img {
-  margin: 1rem 0;
-  width: 55%;
-  border-radius: 10px;
-}
+
 #top {
   border-color: #13ace9f5;
   background-image: url("/assets/images/tealsilkbg.jpeg");
+  background-size:65px;
+
 }
 #top h1,
 li,
@@ -114,6 +115,24 @@ a {
 }
 #top a:hover {
   color: #17e917;
+}
+#top-3{
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 1rem;
+}
+.podium{
+  display: flex;
+  align-items: center;
+}
+.podium a:hover img {
+  transform: scale(1.1); 
+  transition: transform 0.3s ease; 
+}
+.podium a:hover p {
+  margin-top: 10px; /* Agrega un margen superior cuando el mouse se coloca sobre la imagen */
 }
 #artist {
   border-color: #4fcc3eee;
