--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,9 @@
   padding: 0;
   border: 0;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "PixelOperator8", sans-serif;
   margin: 0;
@@ -74,7 +76,6 @@ section {
   flex-direction: column;
   align-items: center;
 
-  scroll-margin-top: 90px;
   padding: 45px 90px;
   height: 100vh;
   width: 70vw;
@@ -91,7 +92,7 @@ section {
 #home {
   height: calc(100vh - 230px);
   border-color: #6b0fb6;
-  background-image: url("/assets/images/banner.png");
+  background: url("/assets/images/banner.png") no-repeat center center fixed;
   background-size:cover;
   color: #6b0fb6;
   font-size: 40px;
@@ -223,6 +224,7 @@ padding-bottom: 5px;
   width: 100%;
   background-color: #fffb00ee;
 }
+
 footer{
   border-width: 5px;
   border-spacing: 2px;
@@ -230,6 +232,8 @@ footer{
   border-collapse: separate;
   border-color: #ec3434;
   background-image: url("/assets/images/037.gif");
+
+  text-align: center;
 }
 
 #go-up{
@@ -254,4 +258,101 @@ footer{
 }
 #go-up:hover {
   transform: translateY(-10px); /* Mover hacia arriba cuando el cursor esté sobre el botón */
+}
+
+@media screen and (max-width: 1440px) {
+
+  body {
+    font-size: 14px;
+  }
+
+  section {
+    padding: 40px 70px;
+  }
+  .turn-invisible{
+    display: none;
+  }
+  #top-3{
+    align-items: center;
+    justify-content: center;
+  }
+
+  .artist-description, .artist-comments{
+    width: 100%;
+    padding: 0px 1rem;
+    }
+
+}
+
+@media screen and (max-width: 1024px) {
+  header > h1{
+    font-size: 2rem;
+
+  }
+  body {
+    font-size: 13px;
+  }
+
+  section {
+    padding: 40px 50px;
+  }
+
+  section > h1 {
+    font-size: 1.5rem;
+  }
+
+  nav {
+    font-size: 1.125rem;
+  }
+
+  .turn-invisible{
+    display: none;
+  }
+  .artist-description, .artist-comments{
+    width: 100%;
+    padding: 0px 1rem;
+    }
+    .artist-stuff{
+      flex-direction: column;
+      width: 100%;
+          }
+}
+
+
+@media screen and (max-width: 768px) {
+  
+  header #name-text{
+    width: 300px;
+  }
+
+  #page-title > h1{
+    font-size: 1rem;
+
+  }
+  
+  nav {
+    display: flex;
+    align-items:baseline;
+    height: 56px;
+    font-size: 1rem;
+  }
+  
+
+  nav li {
+    padding: 5px 0px;
+  }
+  body {
+    font-size: 12px;
+  }
+
+  section {
+    padding: 40px px;
+  }
+  .turn-invisible{
+    display: none;
+  }
+  .artist-stuff{
+flex-direction: column;
+width: 100%;
+    }
 }
