--- a/styles/index.css
+++ b/styles/index.css
@@ -52,6 +52,7 @@ header #page-title {
 
 nav {
   display: flex;
+  justify-content: center;
   align-items: center;
   height: 55px;
   font-size: 1.25rem;
@@ -61,7 +62,7 @@ nav ul {
   list-style: none;
 
   display: flex;
-  justify-content: space-between;
+  justify-content:space-evenly;
 }
 
 nav li {
@@ -324,9 +325,9 @@ input, textarea, button, footer>p{
   section > h1 {
     font-size: 1.5rem;
   }
-
-  nav {
-    font-size: 1.125rem;
+  nav li, a {
+    padding: 5px;
+    font-size: 15px;
   }
 
   .turn-invisible {
@@ -353,20 +354,23 @@ input, textarea, button, footer>p{
     width: 300px;
   }
 
+
+  nav li, a {
+    padding: 5px;
+    font-size: 13px;
+  }
   #page-title > h1 {
     font-size: 1rem;
   }
 
   nav {
     display: flex;
-    align-items: baseline;
-    height: 56px;
+    align-items: center;
+    height: 40px;
     font-size: 1rem;
   }
 
-  nav li {
-    padding: 5px 0px;
-  }
+
   body {
     font-size: 12px;
   }
